# electosim-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  tests.yml
crates/electosim/: Cargo.toml  README.md
crates/electosim/src/: interface.rs  lib.rs  models.rs
crates/electosim/src/methods/divisor/: mod.rs
crates/electosim/src/metrics/: distorsion.rs  enp.rs  mod.rs
crates/electosim/src/utils/: mod.rs
src/: interface.rs  lib.rs  macros.rs  main.rs
src/methods/: mod.rs
src/methods/remainder/: mod.rs
src/tree/: mod.rs  tests.rs
src/tree/containers/: basic.rs  mod.rs  region_results.rs  single_result.rs
src/tree/system/: errors.rs  events.rs  mod.rs
src/tree/system/configs/: auxiliar.rs  mod.rs  multi_district.rs  unique_district.rs
src/utils/: mod.rs
